# sppt-python

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: run_vancouver.py
notebooks/: 01_quickstart.ipynb  02_advanced_examples.ipynb
sppt/: __init__.py  bootstrap.py  core.py  export.py  mapping.py  overlap.py
sppt/data/: Vancouver_DAs_Crime_2021.dbf  Vancouver_DAs_Crime_2021.shp  Vancouver_DAs_Crime_2021.shx
tests/: test_sppt.py
